#17 - Added the tests cases